--- a/app/views/users/components/_account.html.erb
+++ b/app/views/users/components/_account.html.erb
@@ -32,8 +32,8 @@
       </div>
     </div>
     <br>
-    <%= f.label t("settings.account.provider"), class: "form-label" %>
-    <%= f.text_field :provider, class: "form-control", readonly: "" %>
+    <%= f.label t("settings.account.provider"), class: "form-label", style: "display:none" %>
+    <%= f.text_field :provider, class: "form-control", readonly: "", style: "display:none" %>
     <br>
     <%= f.label t("settings.account.language"), class: "form-label" %>
     <%= f.select :language, language_options, {}, { class: "form-control custom-select" } %>
