[APT19.4] Reversar 'dominio de servidor por rol' para implementacion del balanceador scalelite

--- a/app/views/admins/components/_server_room_row.html.erb
+++ b/app/views/admins/components/_server_room_row.html.erb
@@ -34,7 +34,7 @@
     <%= room.uid %>
   </td>
   <td class="text-left">
-    <% running = room.active %>
+    <% running = room_is_running(room.bbb_id) %>
     <% if running %>
       <%= t("administrator.rooms.running") %>
     <% else %>
