[APT22] Implementación de datos de organizacion a inicio de usuarios y advertencia por vencimiento de licencia.

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -19,6 +19,10 @@
     <%= t("room.room_limit_exceeded", difference: @diff) %>
   </div>
 <% end %>
+<div class="alert alert-info alert-dismissible text-center mb-0">
+  <button type="button" class="close" data-dismiss="alert">×</button>
+  <strong>¡Feliz día del Maestro! Gracias por tu importante labor de educar.</strong> Sabemos que necesitas contar con lo mejor, <strong><a href="https://forms.gle/SQSBfmz3ReLYaDHr5"  target="_blank"> por favor califica nuestro servicio.</a></strong>
+</div>
 <div class="background pb-1">
   <div class="container">
     <div class="row pt-7 pt-sm-9">
@@ -32,7 +36,17 @@
             <a><i id="edit-room" class="fa fa-edit align-top home-indicator ml-2" data-edit-room="<%= @room.uid %>"></i></a>
           <% end %>
         </div>
-        <h4 class="text-left mb-6"><%= @room.sessions %> <%= t("room.sessions") %> | <%= @recordings.length %> <%= t("room.recordings") %></h4>
+
+        <% if @organization.nil? %>
+          <h4 class="text-left mb-6">
+            <%= @room.sessions %> <%= t("room.sessions") %> | <%= @recordings.length %> <%= t("room.recordings") %>
+          </h4>
+        <% else %>
+          <h4 class="text-left mb-6">
+            <%= @room.sessions %> <%= t("room.sessions") %> | <%= @recordings.length %> <%= t("room.recordings") %> | <%= t("room.organization") %>: <%= @organization.name %>
+          </h4>
+        <% end %>
+        
         <% unless exceeds_limit %>
           <label class="form-label"><%= t("room.invite_participants") %></label>
           <div class="row">
