--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -40,7 +40,7 @@
             class: "form-control join-form",
             placeholder: t("enter_your_name"),
             value: "#{@name}",
-            readonly: !current_user.nil?, 
+            readonly: !current_user.nil? || !params[:user_name].nil?,
             autofocus: true
             %>
         <span class="input-group-append">
