[APT-DAVID5] Cambios para eliminar un participante de la sala

--- a/app/views/participants/components/_manage_participants.html.erb
+++ b/app/views/participants/components/_manage_participants.html.erb
@@ -21,7 +21,7 @@
         </thead>
         <tbody id="participant-table">
           <% participants.each do |participant| %>
-            <%= render "participants/components/participant_row", participant: participant, room: @room.uid %>
+            <%= render "participants/components/participant_row", participant: participant %>
           <% end %>
         </tbody>
       </table>      
