[APT-DAVID6] Se adiciono el popup de confirmacion al eliminar un participante, revision de la accion compartir sala

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -178,6 +178,6 @@ table {
   cursor: pointer;
 }
 
-#delete-confirm:disabled {
+#delete-confirm:disabled, #participant-delete-confirm:disabled {
   cursor: not-allowed;
 }
