--- a/app/views/participants/modals/_manage_participant_modal.html.erb
+++ b/app/views/participants/modals/_manage_participant_modal.html.erb
@@ -1,7 +1,7 @@
 <%
 #comments
 %>
-<div class="modal fade" id="manageParticipantModal" data-path="<%= delete_participant_path(@room.uid) %>" tabindex="-1" role="dialog">
+<div class="modal fade" id="manageParticipantModal" tabindex="-1" role="dialog" style="z-index: 1045;">
   <div class="modal-dialog modal-dialog-centered modal-manage-participants" role="document">
     <div class="modal-content text-center">
       <div class="modal-body">
