--- a/app/views/participants/components/_participant_row.html.erb
+++ b/app/views/participants/components/_participant_row.html.erb
@@ -17,9 +17,9 @@
           <i class="fas fa-ellipsis-v px-4"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right">
-          <a id="delete-participant" data-value="<%= participant.id %>" class="delete-participant dropdown-item">
+          <button id="delete-participant" data-value="<%= participant.id %>" data-toggle="modal" data-target="#deleteParticipantModal" class= "dropdown-item">
             <i class="dropdown-icon far fa-trash-alt"></i> <%= t("delete") %>
-          </a>
+          </button>
         </div>
       </div>
     </td>
