--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -115,6 +115,7 @@
 <%= render "shared/sessions", recordings: @recordings, pagy: @pagy, only_public: false, shared_room: @shared_room, user_recordings: false, title: t("room.recordings")%>
 
 <%= render "shared/modals/delete_room_modal" %>
+<%= render "participants/modals/delete_participant_modal", delete_location: delete_participant_path(@room.uid) %>
 
 <%= render "shared/modals/create_room_modal" %>
 
