[APT-DAVID7] Se adiciono la funcionalidad de ingresar a la sala con el numero de identificacion

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -125,3 +125,11 @@
 .modal-manage-participants {
   max-width: 50% !important;
 }
+
+.join-form:disabled {
+  cursor: not-allowed;
+}
+
+label#lbParticipantName {
+  padding-top: 2px;
+}
