--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -30,25 +30,51 @@
       </div>
     <% end %>
   <% else %>
-    <%= form_for room_path(@room), method: :post do |f| %>
-      <div class="input-group">
-        <%= f.hidden_field(:search, :value => params[:search])%>
-        <%= f.hidden_field(:column, :value => params[:column])%>
-        <%= f.hidden_field(:direction, :value => params[:direction])%>
-        <%= f.text_field :join_name,
-            required: true,
-            class: "form-control join-form",
-            placeholder: t("enter_your_name"),
-            value: "#{@name}",
-            readonly: !current_user.nil? || !params[:user_name].nil?,
-            autofocus: true
-            %>
-        <span class="input-group-append">
-          <button type="submit" class="btn btn-primary btn-sm px-7 form-control join-form">
-            <%= (!@room_running && @anyone_can_start) ? t("room.start") : t("room.join") %>
-          </button>
-        </span>
-      </div>
-    <% end %>
+    <% if @participants.nil? || @participants.length == 0 %>
+      <%= form_for room_path(@room), method: :post do |f| %>
+        <div class="input-group">
+          <%= f.hidden_field(:search, :value => params[:search])%>
+          <%= f.hidden_field(:column, :value => params[:column])%>
+          <%= f.hidden_field(:direction, :value => params[:direction])%>
+          <%= f.text_field :join_name,
+              required: true,
+              class: "form-control join-form",
+              placeholder: t("enter_your_name"),
+              value: "#{@name}",
+              readonly: !current_user.nil? || !params[:user_name].nil?,
+              autofocus: true
+              %>
+          <span class="input-group-append">
+            <button type="submit" class="btn btn-primary btn-sm px-7 form-control join-form">
+              <%= (!@room_running && @anyone_can_start) ? t("room.start") : t("room.join") %>
+            </button>
+          </span>
+        </div>
+      <% end %>
+    <% else %>
+      <%= form_for room_path(@room), method: :post do |f| %>
+        <div class="input-group">
+          <%= f.hidden_field(:search, :value => params[:search])%>
+          <%= f.hidden_field(:column, :value => params[:column])%>
+          <%= f.hidden_field(:direction, :value => params[:direction])%>
+          <%= hidden_field_tag :join_name, '' %>
+          <%= f.text_field :access_code,
+              class: "form-control join-form access_code",
+              placeholder: t("enter_your_access_code"),
+              "data-path": search_info_path(@room.uid),
+              id: "access_code", 
+              autofocus: true,
+              required: true,
+              maxlength: 10
+              %>
+          <span class="input-group-append">
+            <button id="btnSubmit" type="submit" disabled class="btn btn-primary btn-sm px-7 form-control join-form">
+              <%= (!@room_running && @anyone_can_start) ? t("room.start") : t("room.join") %>
+            </button>
+          </span>
+        </div>
+        <span><label id="lbParticipantName"></label></span>
+      <% end %>
+    <% end %>    
   <% end %>
 <% end %>
