[APT-DAVID9] Se adiciono el boton para descargar la plantilla

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -133,3 +133,9 @@
 label#lbParticipantName {
   padding-top: 2px;
 }
+
+.download-template {
+  text-align: right !important;
+  padding-right: 3% !important;
+  padding-bottom: 1% !important;
+}
