--- a/app/views/participants/modals/_manage_participant_modal.html.erb
+++ b/app/views/participants/modals/_manage_participant_modal.html.erb
@@ -29,7 +29,7 @@
               </div>
               <div class="col-1">
                 <span class="input-group-append">
-                  <button id="download-template" class="btn btn-primary" onclick="downloadTemplate()">
+                  <button id="download-template" class="btn btn-primary">
                     <i class="fas fa-file-download"></i>
                   </button>
                 </span>
