--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -139,3 +139,14 @@ label#lbParticipantName {
   padding-right: 3% !important;
   padding-bottom: 1% !important;
 }
+
+#evaluateok {
+  background: url("../favicon_evaluate.png") 100% no-repeat;
+  padding-left: 9%;
+  width: 60px;
+  height: 60px;
+}
+
+.private-room-message {
+  font-weight: 600;
+}
