[APT] Validar mejoras de carga de participantes a una sala y sala privada. [APT29] Cargar archivos para plantilla y guia en carga de participantes.

--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -78,7 +78,7 @@
             </button>
           </span>
         </div>
-        <span><label id="lbParticipantName"></label></span>
+        <span><strong><label id="lbParticipantName"></label></strong></span>
       <% end %>
     <% end %>    
   <% end %>
