[APT-DAVID13] Se adiciono la funcionalidad del máximo de participantes al cargarlos por el archivo y de modifico el evento en el formulario de join para que funcionara con enter la validación del código de ingreso

--- a/app/views/participants/modals/_manage_participant_modal.html.erb
+++ b/app/views/participants/modals/_manage_participant_modal.html.erb
@@ -9,6 +9,7 @@
           <% setting_id = "participants"%>
 
           <%= content_tag(:div, id: "participants", class: "setting-view card") do %>
+          <div id="show_message"></div>
           <div class="card-body p-6">
             <div class="card-title text-primary">
               <div class="form-group">
