--- a/app/views/participants/components/_participant_row.html.erb
+++ b/app/views/participants/components/_participant_row.html.erb
@@ -17,6 +17,7 @@
           <i class="fas fa-ellipsis-v px-4"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right">
+          <input type="hidden" name="identification" value="<%= participant.identification %>" />
           <button id="delete-participant" data-value="<%= participant.id %>" data-toggle="modal" data-target="#deleteParticipantModal" class= "dropdown-item">
             <i class="dropdown-icon far fa-trash-alt"></i> <%= t("delete") %>
           </button>
