--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -78,7 +78,7 @@
             </button>
           </span>
         </div>
-        <span><strong><label id="lbParticipantName"></label></strong></span>
+        <span><strong>&nbsp;<label class="text-muted" id="lbParticipantName"><%= t("enter_for_finish") %></label></strong></span>
       <% end %>
     <% end %>    
   <% end %>
