--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -57,12 +57,12 @@
         </div>
       <% end %>
     <% else %>
-      <%= form_for room_path(@room), method: :post do |f| %>
+      <%= form_for room_path(@room), :html => { id: "frm_access_code" }, method: :post do |f| %>
         <div class="input-group">
           <%= f.hidden_field(:search, :value => params[:search])%>
           <%= f.hidden_field(:column, :value => params[:column])%>
           <%= f.hidden_field(:direction, :value => params[:direction])%>
-          <%= hidden_field_tag :join_name, '' %>
+          <%= hidden_field_tag :join_name, '', required: true %>
           <%= f.text_field :access_code,
               class: "form-control join-form access_code",
               placeholder: t("enter_your_access_code"),
@@ -73,12 +73,12 @@
               maxlength: 15
               %>
           <span class="input-group-append">
-            <button id="btnSubmit" type="submit" disabled class="btn btn-primary btn-sm px-7 form-control join-form">
+            <button id="btnSubmit" type="button" disabled class="btn btn-primary btn-sm px-7 form-control join-form">
               <%= (!@room_running && @anyone_can_start) ? t("room.start") : t("room.join") %>
             </button>
           </span>
         </div>
-        <span><strong>&nbsp;<label class="text-muted" id="lbParticipantName"><%= t("enter_for_finish") %></label></strong></span>
+        <span><strong>&nbsp;<label class="text-muted" id="lbParticipantName"><%= t("enter_your_access_code") %></label></strong></span>
       <% end %>
     <% end %>    
   <% end %>
