[APT-DAVID19] Cambio para la administracion de las organizaciones.

--- a/lib/assets/_primary_themes.scss
+++ b/lib/assets/_primary_themes.scss
@@ -194,3 +194,9 @@ input:focus, select:focus {
     @extend .btn-primary;
   }
 }
+
+.manage-organization-tab {
+  &.selected {
+    @extend .btn-primary;
+  }
+}
