--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -97,3 +97,28 @@
   z-index: 999;
   background: white;
 }
+
+.manage-organization-tab {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+#create-organization.list-group-item {
+  border-color: rgba($color: #d8d8d8, $alpha: 0.25);
+  border-radius: 1px;
+  width: fit-content;
+}
+
+#createOrganizationModal {
+
+  input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+  }
+
+  input[type=date]::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
+    display: none;
+  }
+}
