[APT-DAVID20] Cambio para la administracion de los usuarios por organización y se agrego la funcionalidad de eliminar todos los participantes de una sala.

--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -110,6 +110,17 @@
   width: fit-content;
 }
 
+#edit-organization.list-group-item {
+  border-color: rgba($color: #d8d8d8, $alpha: 0.25);
+  border-radius: 1px;
+  width: fit-content;
+}
+
+.container.users {
+  border: 1px solid rgba(0,40,100,0.12);
+  padding: 10px !important;
+}
+
 #createOrganizationModal {
 
   input[type=date]::-webkit-inner-spin-button {
@@ -121,4 +132,10 @@
     -webkit-appearance: none;
     display: none;
   }
+}
+
+div#user-content {
+  margin-bottom: 20px;
+  max-height: 250px;
+  overflow: auto;
 }
