APT-33 PART1 Cambios manejo organizaciones

--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -134,8 +134,6 @@
   }
 }
 
-div#user-content {
-  margin-bottom: 20px;
-  max-height: 250px;
-  overflow: auto;
+.organization .selectpicker {
+  z-index: -10 !important;
 }
