--- a/app/views/admins/components/_menu_buttons.html.erb
+++ b/app/views/admins/components/_menu_buttons.html.erb
@@ -39,14 +39,18 @@
       <span class="icon mr-4"><i class="fas fa-user-tag"></i></span><%= t("administrator.roles.title") %>
     <% end %>
   <% end %>
-  <% if highest_role.get_permission("can_manage_organizations")  || highest_role.name == "super_admin" %>
+  <% if highest_role.get_permission("can_manage_organizations") || highest_role.name == "super_admin" %>
     <%= link_to admin_organizations_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "organizations"}" do %>
       <span class="icon mr-4"><i class="fas fa-briefcase"></i></span><%= t("administrator.organizations.title") %>
     <% end %>
   <% end %>
-  <% if highest_role.get_permission("can_manage_organizations")  || highest_role.name == "super_admin" %>
+  <%
+=begin 
+  if highest_role.get_permission("can_manage_organizations") || highest_role.name == "super_admin" %>
     <%= link_to admin_usersxorg_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "usersbyorganization"}" do %>
       <span class="icon mr-4"><i class="fas fa-user-cog"></i></span><%= t("administrator.usersbyorganization.title") %>
     <% end %>
-  <% end %>
+  <% end 
+=end
+  %>
 </div>
