--- a/app/views/admins/components/_users.html.erb
+++ b/app/views/admins/components/_users.html.erb
@@ -132,7 +132,7 @@
                             <% end %>
 
                             <% if highest_role.get_permission("can_manage_organizations") %>
-                              <button id="edit-organization" class="dropdown-item" data-user="<%= user.uid %>" data-organization="<%= user&.organization&.id %>" data-toggle="modal" data-target="#editOrganizationModal">
+                              <button name="edit-organization" class="dropdown-item" data-user="<%= user.uid %>" data-organization="<%= user.organization ? user.organization.id : '' %>" data-toggle="modal" data-target="#editOrganizationModal">
                                 <i class="dropdown-icon fas fa-briefcase"></i> <%= t("administrator.users.settings.assign_organization") %>
                               </button>
                             <% end %>
